// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`Hamburger rendering renders expected elements 1`] = `
<button
  className="Hamburger"
  type="button"
>
  <span
    className="Hamburger__inner Hamburger--active"
  />
</button>
`;

exports[`Hamburger rendering renders expected elements when active is not set 1`] = `
<button
  className="Hamburger"
  type="button"
>
  <span
    className="Hamburger__inner"
  />
</button>
`;
